chore: re-exported

--- a/index.html
+++ b/index.html
@@ -7533,7 +7533,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Dataset-Overview">Dataset Overview<a class="anchor-link" href="#Dataset-Overview">¶</a></h2><p>The dataset below a preprocessed version of the <a href="https://www.kaggle.com/datasets/alanvourch/tmdb-movies-daily-updates">The Ultimate 1Million Movies Dataset (TMDB + IMdb)</a> by Alan Vourc'h. The processing script can be found at <a href="https://github.com/oridim/tree/main/ds220-pandas-project/process_datasets.py"><code>oridim/ds220-pandas-project/process_datasets.py</code></a>. All it does is:</p>
+<h2 id="Dataset-Overview">Dataset Overview<a class="anchor-link" href="#Dataset-Overview">¶</a></h2><p>The dataset below a preprocessed version of the <a href="https://www.kaggle.com/datasets/alanvourch/tmdb-movies-daily-updates">The Ultimate 1Million Movies Dataset (TMDB + IMdb)</a> by Alan Vourc'h. The processing script can be found at <a href="https://github.com/oridim/ds220-pandas-project/blob/main/datasets/process_datasets.py"><code>oridim/ds220-pandas-project/process_datasets.py</code></a>. All it does is:</p>
 <ul>
 <li>Project specific needed fields for the analysis found in this Jupyter notebook.</li>
 <li>Strip out rows with missing column data.</li>
@@ -7542,7 +7542,7 @@ a.anchor-link {
 <li>Limit the rows to only English (the language, not the British) movies that have been already released.</li>
 <li>Limit the rows to only movies that had a theatrical release (i.e. no made-for-TV movies).</li>
 </ul>
-<p>The already processed dataset can be found at <a href="https://github.com/oridim/ds220-pandas-project/tree/main/datasets/oridim.movies.cleaned.csv"><code>oridim/ds220-pandas-project/datasets/oridim.movies.cleaned.csv</code></a></p>
+<p>The already processed dataset can be found at <a href="https://github.com/oridim/ds220-pandas-project/blob/main/datasets/oridim.imdb.cleaned.csv"><code>oridim/ds220-pandas-project/datasets/oridim.movies.cleaned.csv</code></a></p>
 <blockquote>
 <p><strong>INSTRUCTIONS</strong>: Click the play icon on the following two code cells to see the sample top 25 movies by box office revenue.</p>
 </blockquote>
